logs/endpoints.log
Listing '.'...
Listing './bin'...
Compiling './bin/endpoints_wsgifile.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/crap'...
Compiling './lib/python3.5/site-packages/crap/test_gevent_connect.py'...
***   File "./lib/python3.5/site-packages/crap/test_gevent_connect.py", line 11
    print "disconnecting user-{}".format(c)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_gevent_recv_one.py'...
***   File "./lib/python3.5/site-packages/crap/test_gevent_recv_one.py", line 25
    print "{} received msg {} with val {} in room {}".format(ws.user, msg_count, msg, ws.room)
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_gevent_send.py'...
***   File "./lib/python3.5/site-packages/crap/test_gevent_send.py", line 14
    print "{} sending message {} to room {}".format(ws.user, msg, ws.room)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_uwsgi_async_server.py'...
***   File "./lib/python3.5/site-packages/crap/test_uwsgi_async_server.py", line 31
    print "user {} connected to {}".format(query['user'], query['room'])
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_uwsgi_client.py'...
***   File "./lib/python3.5/site-packages/crap/test_uwsgi_client.py", line 24
    print "{} failed {} != {}".format(name, msg, ret_msg)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_uwsgi_client_async.py'...
***   File "./lib/python3.5/site-packages/crap/test_uwsgi_client_async.py", line 31
    print "reconnect for user {} to room {}".format(user, room)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_uwsgi_echo_server.py'...
***   File "./lib/python3.5/site-packages/crap/test_uwsgi_echo_server.py", line 8
    print "connected"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/crap/test_uwsgi_gevent_server.py'...
***   File "./lib/python3.5/site-packages/crap/test_uwsgi_gevent_server.py", line 40
    print "user {} listening on ws {} and redis {} in room {}".format(query['user'], websocket_fd, redis_fd, query['room'])
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crap/test_uwsgi_server.py'...
***   File "./lib/python3.5/site-packages/crap/test_uwsgi_server.py", line 31
    print "user {} connected to {}".format(query['user'], query['room'])
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crap/testcontroller'...
Compiling './lib/python3.5/site-packages/crap/wstools.py'...
***   File "./lib/python3.5/site-packages/crap/wstools.py", line 13
    print "{} sending message {} to room {}".format(ws.user, msg, ws.room)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/decorators-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/endpoints'...
Listing './lib/python3.5/site-packages/endpoints/bin'...
Listing './lib/python3.5/site-packages/endpoints/client'...
Compiling './lib/python3.5/site-packages/endpoints/client/wsgi.py'...
***   File "./lib/python3.5/site-packages/endpoints/client/wsgi.py", line 66
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/endpoints/compat'...
Listing './lib/python3.5/site-packages/endpoints/decorators'...
Compiling './lib/python3.5/site-packages/endpoints/http.py'...
***   File "./lib/python3.5/site-packages/endpoints/http.py", line 721
    ur'0\.', # reserved for 'self-identification'
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/endpoints/interface'...
Compiling './lib/python3.5/site-packages/endpoints/reflection.py'...
***   File "./lib/python3.5/site-packages/endpoints/reflection.py", line 255
    method_regex = re.compile(ur"^[A-Z][A-Z0-9]+(_|$)")
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/endpoints-1.1.24.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
